# ams_jetcis_software

./: .gitignore  LICENSE  Makefile  README.md  build_installer.sh  create_image_from_scratch.md  gui.sh  howtopackage.md  install.sh  pyproject.toml  requirements.txt  setup.cfg  setup.py  start_jupyter.sh  upgrade_instructions.odt  version_info.cfg
ams_jetcis/: __main__.py  gui_app.py  gui_config.cfg
ams_jetcis/common/: driver_access.py  errors.py  fast_ioctl.py  histogram.py  kernel.py  tooltip.py
ams_jetcis/configs/: Mira050.ini
ams_jetcis/evk_tools/: server_app.py  server_app_host.py
ams_jetcis/notebooks/: dark_images.ipynb  illuminated_ptc.ipynb  plotter_ptc.ipynb  ptc_mira220.ipynb
ams_jetcis/scripts/: capture_images.py  run_headless.py  sensor_script_example.py  test_module.py
ams_jetcis/sensors/: sensor.py  set_sensor.py
data/: camera_overrides.isp  characterization_ams-1.0.4-py3-none-any.whl  dtbnano.dtb  install_0.sh  themes_custom.py
data/gst-plugins-good-1.14.5_patched/: config.h.in
notebooks/: EVK_Tools_Usage.ipynb  illuminated_ptc.ipynb  measurement_mira050.ipynb  plotter_noise.ipynb
scripts/: __main__.py  plotter.py  process_images.py
scripts/Mira030/: noise_measurement.py
scripts/Mira050/: SAR_measurements.py  SAR_measurements_v2.py  dark_current.py  driver_access.py  regs_800x600_10b_1500mbps_38.4_stacknewtrim_30fps.txt
scripts/Mira130/: cam0.py  event_detector.py
scripts/Mira220/: context_switching.py  (+2 more)
shellinstaller/: dtbnano_L4T_32_6_1.dtb  extlinux.conf  install.old  install_0.sh  v4l2.py
tests/: test_import.py
(+555 files in other folders)
