[metadata]
name = ams_jetcis_software
version = 2.4.1
author = ams
license = MIT License
description = package for ams jetcis
author_email = philippe.baetens@ams.com
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent


[options]
packages = find:
package_dir =
    =.

python_requires = >=3.6
install_requires = 
    pyro4
    dataclasses
# scripts =
#     bash_scripts/noise_measurement.py
 
[options.package_data]
* = *.txt, *.rst, *.cfg, *.png, *.config, *.sensor

[options.packages.find]
    where = .
    include = ams_jetcis*
    exclude =  
        shellinstaller
        notebooks
        mira_xs_api
    
# include = ams_jetcis
# mira_xs_api
# characterization



#TBD
#SCRIPTS
#install_requires
#entry points




# data_files =
#wheel ignores this. use package_data and data_files
#include_package_data = True #refer to MANIFEST.in for files to be added to package







# packages = find_namespace:
# # package_dir = 
# #     =.
# packages =
#     ams_jetcis
#     mira_xs_api
#     characterization


#Scripts = 

# [options.packages.find]
# where = .
# include = ams_jetcis
# mira_xs_api
# characterization
# exclude = 

# https://setuptools.pypa.io/en/latest/userguide/declarative_config.html